syntax = "proto3";

package trading_chart;

option go_package = "grpcserver/v1";

service TradingChart {
  rpc StreamOHLCCandlestick(StreamOHLCCandlestickRequest) returns (stream StreamOHLCCandlestickResponse);
}

message StreamOHLCCandlestickRequest {
  string symbol = 1;
  double open_price = 2;
  double high_price = 3;
  double low_price = 4;
  double close_price = 5;
  int64 start_time = 6;
}

message StreamOHLCCandlestickResponse {
}